--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -8,8 +8,16 @@
 		<servlet-name>ListerCollaborateursController</servlet-name>
 		<servlet-class>dev.sgp.web.ListerCollaborateursController</servlet-class>
 	</servlet>
+	<servlet>
+		<servlet-name>EditerCollaborateurController</servlet-name>
+		<servlet-class>dev.sgp.web.EditerCollaborateurController</servlet-class>
+	</servlet>
 	<servlet-mapping>
 		<servlet-name>ListerCollaborateursController</servlet-name>
 		<url-pattern>/collaborateurs/lister</url-pattern>
 	</servlet-mapping>
-	</web-app>
+	<servlet-mapping>
+		<servlet-name>EditerCollaborateurController</servlet-name>
+		<url-pattern>/collaborateurs/editer</url-pattern>
+	</servlet-mapping>
+</web-app>
